creation of sections

--- a/public/index.html
+++ b/public/index.html
@@ -54,46 +54,6 @@
 				</div>
 			</section>
 			<!-- end topLine-->
-			<div class="container">
-				<div class="row">
-					<div class="col-auto">
-						<div class="btn btn-primary btn-lg" href="#">Отправить</div>
-					</div>
-					<div class="col-auto">
-						<div class="btn btn-primary" href="#">Отправить</div>
-					</div>
-					<div class="col-auto">
-						<div class="btn btn-outline-primary" href="#">Отправить</div>
-					</div>
-					<div class="col-auto">
-						<div class="btn btn-primary btn-sm" href="#">Отправить</div>
-					</div>
-					<div class="col-auto">
-						<div class="btn btn-secondary btn-sm" href="#">Отправить</div>
-					</div>
-					<div class="col-auto">
-						<div class="btn btn-outline-secondary btn-sm" href="#">Отправить</div>
-					</div>
-					<div class="col-auto">
-						<div class="btn btn-info btn-lg" href="#">Отправить</div>
-					</div>
-				</div>
-				<h1>Lorem ipsum dolor sit amet consectetur.</h1>
-				<h2>Lorem ipsum dolor sit amet consectetur.</h2>
-				<h3>Lorem ipsum dolor sit amet consectetur.</h3>
-				<h4>Lorem ipsum dolor sit amet consectetur.</h4>
-				<h5>Lorem ipsum dolor sit amet consectetur.</h5>
-				<h6>Lorem ipsum dolor sit amet consectetur.</h6>
-				<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorem quam harum maxime perferendis magnam quis. Laudantium, ea error rerum deserunt asperiores unde nemo dolores a reiciendis quidem non ad tempora.</p>
-				<div class="row">
-					<div class="col-6">
-						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam molestiae veritatis mollitia ipsum veniam, quos ut libero ducimus optio ullam laboriosam iste corporis odit, consectetur tenetur ipsa placeat quae aliquid.</p>
-					</div>
-					<div class="col-6">
-						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam molestiae veritatis mollitia ipsum veniam, quos ut libero ducimus optio ullam laboriosam iste corporis odit, consectetur tenetur ipsa placeat quae aliquid.</p>
-					</div>
-				</div>
-			</div>
 			<!-- start headerBlock-->
 			<div class="headerBlock section" id="headerBlock">
 				<div class="container">
@@ -104,16 +64,142 @@
 				</div>
 			</div>
 			<!-- end headerBlock-->
-			<!-- start sForm-->
-			<section class="sForm section" id="sForm">
+			<!-- start sCatalog-->
+			<section class="sCatalog section" id="sCatalog">
 				<div class="container">
 					<div class="section-title text-center">
-						<h2>sForm</h2>
+						<h2>sCatalog</h2>
 					</div>
 					<div class="row"></div>
 				</div>
 			</section>
-			<!-- end sForm-->
+			<!-- end sCatalog-->
+			<div class="section-wrapper">
+				<!-- start sPortfolio-->
+				<section class="sPortfolio section" id="sPortfolio">
+					<div class="container">
+						<div class="section-title text-center">
+							<h2>sPortfolio</h2>
+						</div>
+						<div class="row"></div>
+					</div>
+				</section>
+				<!-- end sPortfolio-->
+			</div>
+			<!-- start sDesign-->
+			<section class="sDesign section" id="sDesign">
+				<div class="container">
+					<div class="section-title text-center">
+						<h2>sDesign</h2>
+					</div>
+					<div class="row"></div>
+				</div>
+			</section>
+			<!-- end sDesign-->
+			<!-- start sCalculator-->
+			<section class="sCalculator section" id="sCalculator">
+				<div class="container">
+					<div class="section-title text-center">
+						<h2>sCalculator</h2>
+					</div>
+					<div class="row"></div>
+				</div>
+			</section>
+			<!-- end sCalculator-->
+			<div class="section-wrapper">
+				<!-- start sTypical-->
+				<section class="sTypical section" id="sTypical">
+					<div class="container">
+						<div class="section-title text-center">
+							<h2>sTypical</h2>
+						</div>
+						<div class="row"></div>
+					</div>
+				</section>
+				<!-- end sTypical-->
+				<!-- start sPriceList-->
+				<section class="sPriceList section" id="sPriceList">
+					<div class="container">
+						<div class="section-title text-center">
+							<h2>sPriceList</h2>
+						</div>
+						<div class="row"></div>
+					</div>
+				</section>
+				<!-- end sPriceList-->
+			</div>
+			<!-- start sReviews-->
+			<section class="sReviews section" id="sReviews">
+				<div class="container">
+					<div class="section-title text-center">
+						<h2>sReviews</h2>
+					</div>
+					<div class="row"></div>
+				</div>
+			</section>
+			<!-- end sReviews-->
+			<!-- start sStages-->
+			<section class="sStages section" id="sStages">
+				<div class="container">
+					<div class="section-title text-center">
+						<h2>sStages</h2>
+					</div>
+					<div class="row"></div>
+				</div>
+			</section>
+			<!-- end sStages-->
+			<div class="section-wrapper">
+				<!-- start sAbout-->
+				<section class="sAbout section" id="sAbout">
+					<div class="container">
+						<div class="section-title text-center">
+							<h2>sAbout</h2>
+						</div>
+						<div class="row"></div>
+					</div>
+				</section>
+				<!-- end sAbout-->
+				<!-- start sAdvantages-->
+				<section class="sAdvantages section" id="sAdvantages">
+					<div class="container">
+						<div class="section-title text-center">
+							<h2>sAdvantages</h2>
+						</div>
+						<div class="row"></div>
+					</div>
+				</section>
+				<!-- end sAdvantages-->
+				<!-- start sQuestions-->
+				<section class="sQuestions section" id="sQuestions">
+					<div class="container">
+						<div class="section-title text-center">
+							<h2>sQuestions</h2>
+						</div>
+						<div class="row"></div>
+					</div>
+				</section>
+				<!-- end sQuestions-->
+				<!-- start sCertificates-->
+				<section class="sCertificates section" id="sCertificates">
+					<div class="container">
+						<div class="section-title text-center">
+							<h2>sCertificates</h2>
+						</div>
+						<div class="row"></div>
+					</div>
+				</section>
+				<!-- end sCertificates-->
+				<!-- start sWeProduce-->
+				<section class="sWeProduce section" id="sWeProduce">
+					<div class="container">
+						<div class="section-title text-center">
+							<h2>sWeProduce</h2>
+						</div>
+						<div class="row"></div>
+					</div>
+				</section>
+				<!-- end sWeProduce-->
+			</div>
 			<!-- start sContact-->
 			<section class="sContact section" id="sContact">
 				<div class="container">
@@ -124,16 +210,18 @@
 				</div>
 			</section>
 			<!-- end sContact-->
-			<footer class="footer">
-				<div class="container">
-					<div class="row">
-						<div class="col"></div>
-						<div class="col"></div>
-						<div class="col"></div>
-						<div class="col-auto"></div>
+			<div class="section-wrapper">
+				<footer class="footer">
+					<div class="container">
+						<div class="row">
+							<div class="col"></div>
+							<div class="col"></div>
+							<div class="col"></div>
+							<div class="col-auto"></div>
+						</div>
 					</div>
-				</div>
-			</footer>
+				</footer>
+			</div>
 		</div>
 		<!--  start modals--><a class="link-modal-js" href="modal-call">modal-call </a>
 		<div id="modal-call" style="display: none">
