--- a/public/index.html
+++ b/public/index.html
@@ -192,73 +192,251 @@
 				<div class="container">
 					<div class="section-title text-center">
 						<h4>Дизайн</h4>
-						<h2>Выберите внешний вид навеса под свой вкус</h2>
+						<h2>Выберите внешний вид&nbsp;навеса под свой&nbsp;вкус</h2>
 					</div>
-					<div class="row">
-						<div class="col-xl-5">
+					<div class="sDesign__row-lg row">
+						<div class="col-lg-5">
 							<h3>Материалы кровли</h3>
-							<div class="sDesign__block">
-								<div class="sDesign__item sDesign__item--lg bg-wrap">
-									<!-- picture-->
-									<picture class="picture-bg"> 
-										<source type="image/avif" srcset="img/@2x/avif/sDesign-1.avif"/>
-										<source type="image/webp" srcset="img/@2x/webp/sDesign-1.webp"/><img class="object-fit-js" src="img/@2x/sDesign-1.jpg" alt="" loading="lazy"/>
-									</picture>
-									<!-- /picture--><span>Сотовый поликарбонат</span>
-								</div>
+							<div class="sDesign__block sDesign__block--lg">
+								<a class="sDesign__item bg-wrap" href="#">
+									<div class="sDesign__img-wrap picture-bg">
+										<!-- picture-->
+										<picture> 
+											<source type="image/avif" srcset="img/@2x/avif/sDesign-1.avif"/>
+											<source type="image/webp" srcset="img/@2x/webp/sDesign-1.webp"/><img class="object-fit-js" src="img/@2x/sDesign-1.jpg" alt="" loading="lazy"/>
+										</picture>
+										<!-- /picture-->
+									</div><span>Сотовый поликарбонат</span>
+								</a>
+								<a class="sDesign__item bg-wrap" href="#">
+									<div class="sDesign__img-wrap picture-bg">
+										<!-- picture-->
+										<picture> 
+											<source type="image/avif" srcset="img/@2x/avif/sDesign-2.avif"/>
+											<source type="image/webp" srcset="img/@2x/webp/sDesign-2.webp"/><img class="object-fit-js" src="img/@2x/sDesign-2.jpg" alt="" loading="lazy"/>
+										</picture>
+										<!-- /picture-->
+									</div><span>Монолитный поликарбонат</span>
+								</a>
+								<a class="sDesign__item bg-wrap" href="#">
+									<div class="sDesign__img-wrap picture-bg">
+										<!-- picture-->
+										<picture> 
+											<source type="image/avif" srcset="img/@2x/avif/sDesign-3.avif"/>
+											<source type="image/webp" srcset="img/@2x/webp/sDesign-3.webp"/><img class="object-fit-js" src="img/@2x/sDesign-3.jpg" alt="" loading="lazy"/>
+										</picture>
+										<!-- /picture-->
+									</div><span>Профнастил</span>
+								</a>
+								<a class="sDesign__item bg-wrap" href="#">
+									<div class="sDesign__img-wrap picture-bg">
+										<!-- picture-->
+										<picture> 
+											<source type="image/avif" srcset="img/@2x/avif/sDesign-4.avif"/>
+											<source type="image/webp" srcset="img/@2x/webp/sDesign-4.webp"/><img class="object-fit-js" src="img/@2x/sDesign-4.jpg" alt="" loading="lazy"/>
+										</picture>
+										<!-- /picture-->
+									</div><span>Металлочерепица</span>
+								</a>
+								<a class="sDesign__item bg-wrap" href="#">
+									<div class="sDesign__img-wrap picture-bg">
+										<!-- picture-->
+										<picture> 
+											<source type="image/avif" srcset="img/@2x/avif/sDesign-5.avif"/>
+											<source type="image/webp" srcset="img/@2x/webp/sDesign-5.webp"/><img class="object-fit-js" src="img/@2x/sDesign-5.jpg" alt="" loading="lazy"/>
+										</picture>
+										<!-- /picture-->
+									</div><span>Мягкая кровля</span>
+								</a>
+								<a class="sDesign__item bg-wrap" href="#">
+									<div class="sDesign__img-wrap picture-bg">
+										<!-- picture-->
+										<picture> 
+											<source type="image/avif" srcset="img/@2x/avif/sDesign-6.avif"/>
+											<source type="image/webp" srcset="img/@2x/webp/sDesign-6.webp"/><img class="object-fit-js" src="img/@2x/sDesign-6.jpg" alt="" loading="lazy"/>
+										</picture>
+										<!-- /picture-->
+									</div><span>Ондулин</span>
+								</a>
 							</div>
-							<div class="sDesign__block">
-								<div class="sDesign__item sDesign__item--lg bg-wrap">
-									<!-- picture-->
-									<picture class="picture-bg"> 
-										<source type="image/avif" srcset="img/@2x/avif/sDesign-2.avif"/>
-										<source type="image/webp" srcset="img/@2x/webp/sDesign-2.webp"/><img class="object-fit-js" src="img/@2x/sDesign-2.jpg" alt="" loading="lazy"/>
-									</picture>
-									<!-- /picture--><span>Монолитный поликарбонат</span>
+						</div>
+						<div class="col-lg-7">
+							<h3>Цвета</h3>
+							<div class="sDesign__row-sm row">
+								<div class="col-12">
+									<div class="sDesign__subtitle">100+ цветов кровли
+									</div>
+									<div class="sDesign__block sDesign__block--sm">
+										<a class="sDesign__item bg-wrap" href="#" style="--itemBg:#F9F9F9;">
+											<div class="sDesign__img-wrap picture-bg">
+											</div><span>Прозрачный</span>
+										</a>
+										<a class="sDesign__item bg-wrap" href="#" style="--itemBg:#DEE2E3;">
+											<div class="sDesign__img-wrap picture-bg">
+											</div><span>Белый опал</span>
+										</a>
+										<a class="sDesign__item bg-wrap" href="#" style="--itemBg:#56E6EB;">
+											<div class="sDesign__img-wrap picture-bg">
+											</div><span>Бирюза</span>
+										</a>
+										<a class="sDesign__item bg-wrap" href="#" style="--itemBg:#88776F;">
+											<div class="sDesign__img-wrap picture-bg">
+											</div><span>Янтарь</span>
+										</a>
+										<a class="sDesign__item bg-wrap" href="#" style="--itemBg:#AA978A;">
+											<div class="sDesign__img-wrap picture-bg">
+											</div><span>Бронза</span>
+										</a>
+										<a class="sDesign__item bg-wrap" href="#" style="--itemBg:#EFD71D;">
+											<div class="sDesign__img-wrap picture-bg">
+											</div><span>Желтый</span>
+										</a>
+										<a class="sDesign__item bg-wrap" href="#" style="--itemBg:#5EB454;">
+											<div class="sDesign__img-wrap picture-bg">
+											</div><span>Зеленый</span>
+										</a>
+										<a class="sDesign__item bg-wrap" href="#" style="--itemBg:#DF3939;">
+											<div class="sDesign__img-wrap picture-bg">
+											</div><span>Красный</span>
+										</a>
+										<a class="sDesign__item bg-wrap" href="#" style="--itemBg:#FEAF27;">
+											<div class="sDesign__img-wrap picture-bg">
+											</div><span>Оранжевый</span>
+										</a>
+										<a class="sDesign__item bg-wrap" href="#" style="--itemBg:#228AE4;">
+											<div class="sDesign__img-wrap picture-bg">
+											</div><span>Синий</span>
+										</a>
+									</div>
 								</div>
-							</div>
-							<div class="sDesign__block">
-								<div class="sDesign__item sDesign__item--lg bg-wrap">
-									<!-- picture-->
-									<picture class="picture-bg"> 
-										<source type="image/avif" srcset="img/@2x/avif/sDesign-3.avif"/>
-										<source type="image/webp" srcset="img/@2x/webp/sDesign-3.webp"/><img class="object-fit-js" src="img/@2x/sDesign-3.jpg" alt="" loading="lazy"/>
-									</picture>
-									<!-- /picture--><span>Профнастил</span>
-								</div>
-							</div>
-							<div class="sDesign__block">
-								<div class="sDesign__item sDesign__item--lg bg-wrap">
-									<!-- picture-->
-									<picture class="picture-bg"> 
-										<source type="image/avif" srcset="img/@2x/avif/sDesign-4.avif"/>
-										<source type="image/webp" srcset="img/@2x/webp/sDesign-4.webp"/><img class="object-fit-js" src="img/@2x/sDesign-4.jpg" alt="" loading="lazy"/>
-									</picture>
-									<!-- /picture--><span>Металлочерепица</span>
-								</div>
-							</div>
-							<div class="sDesign__block">
-								<div class="sDesign__item sDesign__item--lg bg-wrap">
-									<!-- picture-->
-									<picture class="picture-bg"> 
-										<source type="image/avif" srcset="img/@2x/avif/sDesign-5.avif"/>
-										<source type="image/webp" srcset="img/@2x/webp/sDesign-5.webp"/><img class="object-fit-js" src="img/@2x/sDesign-5.jpg" alt="" loading="lazy"/>
-									</picture>
-									<!-- /picture--><span>Мягкая кровля</span>
-								</div>
-							</div>
-							<div class="sDesign__block">
-								<div class="sDesign__item sDesign__item--lg bg-wrap">
-									<!-- picture-->
-									<picture class="picture-bg"> 
-										<source type="image/avif" srcset="img/@2x/avif/sDesign-6.avif"/>
-										<source type="image/webp" srcset="img/@2x/webp/sDesign-6.webp"/><img class="object-fit-js" src="img/@2x/sDesign-6.jpg" alt="" loading="lazy"/>
-									</picture>
-									<!-- /picture--><span>Ондулин</span>
+								<div class="col-12">
+									<div class="sDesign__subtitle">200+ цветов эмали для металлического каркаса
+									</div>
+									<div class="sDesign__block sDesign__block--sm">
+										<a class="sDesign__item bg-wrap" href="#">
+											<div class="sDesign__img-wrap picture-bg">
+												<!-- picture-->
+												<picture> 
+													<source type="image/avif" srcset="img/@2x/avif/sDesign-7.avif"/>
+													<source type="image/webp" srcset="img/@2x/webp/sDesign-7.webp"/><img class="object-fit-js" src="img/@2x/sDesign-7.jpg" alt="" loading="lazy"/>
+												</picture>
+												<!-- /picture-->
+											</div><span>Черный</span>
+										</a>
+										<a class="sDesign__item bg-wrap" href="#">
+											<div class="sDesign__img-wrap picture-bg">
+												<!-- picture-->
+												<picture> 
+													<source type="image/avif" srcset="img/@2x/avif/sDesign-8.avif"/>
+													<source type="image/webp" srcset="img/@2x/webp/sDesign-8.webp"/><img class="object-fit-js" src="img/@2x/sDesign-8.jpg" alt="" loading="lazy"/>
+												</picture>
+												<!-- /picture-->
+											</div><span>Бронза</span>
+										</a>
+										<a class="sDesign__item bg-wrap" href="#">
+											<div class="sDesign__img-wrap picture-bg">
+												<!-- picture-->
+												<picture> 
+													<source type="image/avif" srcset="img/@2x/avif/sDesign-9.avif"/>
+													<source type="image/webp" srcset="img/@2x/webp/sDesign-9.webp"/><img class="object-fit-js" src="img/@2x/sDesign-9.jpg" alt="" loading="lazy"/>
+												</picture>
+												<!-- /picture-->
+											</div><span>Голубой</span>
+										</a>
+										<a class="sDesign__item bg-wrap" href="#">
+											<div class="sDesign__img-wrap picture-bg">
+												<!-- picture-->
+												<picture> 
+													<source type="image/avif" srcset="img/@2x/avif/sDesign-10.avif"/>
+													<source type="image/webp" srcset="img/@2x/webp/sDesign-10.webp"/><img class="object-fit-js" src="img/@2x/sDesign-10.jpg" alt="" loading="lazy"/>
+												</picture>
+												<!-- /picture-->
+											</div><span>Графит</span>
+										</a>
+										<a class="sDesign__item bg-wrap" href="#">
+											<div class="sDesign__img-wrap picture-bg">
+												<!-- picture-->
+												<picture> 
+													<source type="image/avif" srcset="img/@2x/avif/sDesign-11.avif"/>
+													<source type="image/webp" srcset="img/@2x/webp/sDesign-11.webp"/><img class="object-fit-js" src="img/@2x/sDesign-11.jpg" alt="" loading="lazy"/>
+												</picture>
+												<!-- /picture-->
+											</div><span>Изумруд</span>
+										</a>
+										<a class="sDesign__item bg-wrap" href="#">
+											<div class="sDesign__img-wrap picture-bg">
+												<!-- picture-->
+												<picture> 
+													<source type="image/avif" srcset="img/@2x/avif/sDesign-12.avif"/>
+													<source type="image/webp" srcset="img/@2x/webp/sDesign-12.webp"/><img class="object-fit-js" src="img/@2x/sDesign-12.jpg" alt="" loading="lazy"/>
+												</picture>
+												<!-- /picture-->
+											</div><span>Коричневый</span>
+										</a>
+										<a class="sDesign__item bg-wrap" href="#">
+											<div class="sDesign__img-wrap picture-bg">
+												<!-- picture-->
+												<picture> 
+													<source type="image/avif" srcset="img/@2x/avif/sDesign-13.avif"/>
+													<source type="image/webp" srcset="img/@2x/webp/sDesign-13.webp"/><img class="object-fit-js" src="img/@2x/sDesign-13.jpg" alt="" loading="lazy"/>
+												</picture>
+												<!-- /picture-->
+											</div><span>Серебристый</span>
+										</a>
+										<a class="sDesign__item bg-wrap" href="#">
+											<div class="sDesign__img-wrap picture-bg">
+												<!-- picture-->
+												<picture> 
+													<source type="image/avif" srcset="img/@2x/avif/sDesign-14.avif"/>
+													<source type="image/webp" srcset="img/@2x/webp/sDesign-14.webp"/><img class="object-fit-js" src="img/@2x/sDesign-14.jpg" alt="" loading="lazy"/>
+												</picture>
+												<!-- /picture-->
+											</div><span>Синий</span>
+										</a>
+										<a class="sDesign__item bg-wrap" href="#">
+											<div class="sDesign__img-wrap picture-bg">
+												<!-- picture-->
+												<picture> 
+													<source type="image/avif" srcset="img/@2x/avif/sDesign-15.avif"/>
+													<source type="image/webp" srcset="img/@2x/webp/sDesign-15.webp"/><img class="object-fit-js" src="img/@2x/sDesign-15.jpg" alt="" loading="lazy"/>
+												</picture>
+												<!-- /picture-->
+											</div><span>Вишневый</span>
+										</a>
+										<a class="sDesign__item bg-wrap" href="#">
+											<div class="sDesign__img-wrap picture-bg">
+												<!-- picture-->
+												<picture> 
+													<source type="image/avif" srcset="img/@2x/avif/sDesign-16.avif"/>
+													<source type="image/webp" srcset="img/@2x/webp/sDesign-16.webp"/><img class="object-fit-js" src="img/@2x/sDesign-16.jpg" alt="" loading="lazy"/>
+												</picture>
+												<!-- /picture-->
+											</div><span>Зеленый</span>
+										</a>
+										<a class="sDesign__item bg-wrap" href="#">
+											<div class="sDesign__img-wrap picture-bg">
+												<!-- picture-->
+												<picture> 
+													<source type="image/avif" srcset="img/@2x/avif/sDesign-17.avif"/>
+													<source type="image/webp" srcset="img/@2x/webp/sDesign-17.webp"/><img class="object-fit-js" src="img/@2x/sDesign-17.jpg" alt="" loading="lazy"/>
+												</picture>
+												<!-- /picture-->
+											</div><span>Золотистый</span>
+										</a>
+										<a class="sDesign__item bg-wrap" href="#">
+											<div class="sDesign__img-wrap picture-bg">
+												<!-- picture-->
+												<picture> 
+													<source type="image/avif" srcset="img/@2x/avif/sDesign-18.avif"/>
+													<source type="image/webp" srcset="img/@2x/webp/sDesign-18.webp"/><img class="object-fit-js" src="img/@2x/sDesign-18.jpg" alt="" loading="lazy"/>
+												</picture>
+												<!-- /picture-->
+											</div><span>Красный</span>
+										</a>
+									</div>
 								</div>
 							</div>
 						</div>
-						<div class="col-xl-7"></div>
 					</div>
 				</div>
 			</section>
