--- a/public/index.html
+++ b/public/index.html
@@ -539,16 +539,143 @@
 					</div>
 				</section>
 				<!-- end sCertificates-->
-				<!-- start sWeProduce-->
-				<section class="sWeProduce section" id="sWeProduce">
+				<!-- start sCatalog-->
+				<section class="sCatalog sCatalog--prod section" id="sCatalog">
 					<div class="container">
 						<div class="section-title text-center">
-							<h2>sWeProduce</h2>
+							<h3>Производим также</h3>
 						</div>
-						<div class="row"></div>
+						<div class="sCatalog__slider-wrapper">
+							<div class="swiper-button-hand swiper-button-hand-prev swiper-button-prev">
+								<svg class="icon icon-arrow-left ">
+									<use xlink:href="img/svg/sprite.svg#arrow-left"></use>
+								</svg>
+							</div>
+							<div class="swiper-button-hand swiper-button-hand-next swiper-button-next">
+								<svg class="icon icon-arrow-right ">
+									<use xlink:href="img/svg/sprite.svg#arrow-right"></use>
+								</svg>
+							</div>
+							<div class="sCatalog__slider sCatalog__slider--js swiper">
+								<div class="swiper-wrapper">
+									<div class="sCatalog__slide swiper-slide">
+										<div class="catalogItem">
+											<!-- picture-->
+											<picture> 
+												<source type="image/avif" srcset="img/@2x/avif/catalogItem-1.avif"/>
+												<source type="image/webp" srcset="img/@2x/webp/catalogItem-1.webp"/><img class="object-fit-js" src="img/@2x/catalogItem-1.jpg" alt="" loading="lazy"/>
+											</picture>
+											<!-- /picture-->
+											<h6>Бетонные площадки</h6>
+											<div class="small">от 59 150 ₽</div>
+											<a class="catalogItem__btn" href="#">Получить расчет
+											</a>
+										</div>
+									</div>
+									<div class="sCatalog__slide swiper-slide">
+										<div class="catalogItem">
+											<!-- picture-->
+											<picture> 
+												<source type="image/avif" srcset="img/@2x/avif/catalogItem-2.avif"/>
+												<source type="image/webp" srcset="img/@2x/webp/catalogItem-2.webp"/><img class="object-fit-js" src="img/@2x/catalogItem-2.jpg" alt="" loading="lazy"/>
+											</picture>
+											<!-- /picture-->
+											<h6>Укладка тротуарной <br> плитки</h6>
+											<div class="small">от 59 150 ₽</div>
+											<a class="catalogItem__btn" href="#">Получить расчет
+											</a>
+										</div>
+									</div>
+									<div class="sCatalog__slide swiper-slide">
+										<div class="catalogItem">
+											<!-- picture-->
+											<picture> 
+												<source type="image/avif" srcset="img/@2x/avif/catalogItem-3.avif"/>
+												<source type="image/webp" srcset="img/@2x/webp/catalogItem-3.webp"/><img class="object-fit-js" src="img/@2x/catalogItem-3.jpg" alt="" loading="lazy"/>
+											</picture>
+											<!-- /picture-->
+											<h6>Ворота откатные <br> и&nbsp;распашные</h6>
+											<div class="small">от 59 150 ₽</div>
+											<a class="catalogItem__btn" href="#">Получить расчет
+											</a>
+										</div>
+									</div>
+									<div class="sCatalog__slide swiper-slide">
+										<div class="catalogItem">
+											<!-- picture-->
+											<picture> 
+												<source type="image/avif" srcset="img/@2x/avif/catalogItem-4.avif"/>
+												<source type="image/webp" srcset="img/@2x/webp/catalogItem-4.webp"/><img class="object-fit-js" src="img/@2x/catalogItem-4.jpg" alt="" loading="lazy"/>
+											</picture>
+											<!-- /picture-->
+											<h6>Заборы и&nbsp;ограждения</h6>
+											<div class="small">от 59 150 ₽</div>
+											<a class="catalogItem__btn" href="#">Получить расчет
+											</a>
+										</div>
+									</div>
+									<div class="sCatalog__slide swiper-slide">
+										<div class="catalogItem">
+											<!-- picture-->
+											<picture> 
+												<source type="image/avif" srcset="img/@2x/avif/catalogItem-5.avif"/>
+												<source type="image/webp" srcset="img/@2x/webp/catalogItem-5.webp"/><img class="object-fit-js" src="img/@2x/catalogItem-5.jpg" alt="" loading="lazy"/>
+											</picture>
+											<!-- /picture-->
+											<h6>Кованые изделия</h6>
+											<div class="small">от 59 150 ₽</div>
+											<a class="catalogItem__btn" href="#">Получить расчет
+											</a>
+										</div>
+									</div>
+									<div class="sCatalog__slide swiper-slide">
+										<div class="catalogItem">
+											<!-- picture-->
+											<picture> 
+												<source type="image/avif" srcset="img/@2x/avif/catalogItem-6.avif"/>
+												<source type="image/webp" srcset="img/@2x/webp/catalogItem-6.webp"/><img class="object-fit-js" src="img/@2x/catalogItem-6.jpg" alt="" loading="lazy"/>
+											</picture>
+											<!-- /picture-->
+											<h6>Крыльцо</h6>
+											<div class="small">от 59 150 ₽</div>
+											<a class="catalogItem__btn" href="#">Получить расчет
+											</a>
+										</div>
+									</div>
+									<div class="sCatalog__slide swiper-slide">
+										<div class="catalogItem">
+											<!-- picture-->
+											<picture> 
+												<source type="image/avif" srcset="img/@2x/avif/catalogItem-5.avif"/>
+												<source type="image/webp" srcset="img/@2x/webp/catalogItem-5.webp"/><img class="object-fit-js" src="img/@2x/catalogItem-5.jpg" alt="" loading="lazy"/>
+											</picture>
+											<!-- /picture-->
+											<h6>Лестницы</h6>
+											<div class="small">от 59 150 ₽</div>
+											<a class="catalogItem__btn" href="#">Получить расчет
+											</a>
+										</div>
+									</div>
+									<div class="sCatalog__slide swiper-slide">
+										<div class="catalogItem">
+											<!-- picture-->
+											<picture> 
+												<source type="image/avif" srcset="img/@2x/avif/catalogItem-6.avif"/>
+												<source type="image/webp" srcset="img/@2x/webp/catalogItem-6.webp"/><img class="object-fit-js" src="img/@2x/catalogItem-6.jpg" alt="" loading="lazy"/>
+											</picture>
+											<!-- /picture-->
+											<h6>Изготовление металлоконструкций</h6>
+											<div class="small">от 59 150 ₽</div>
+											<a class="catalogItem__btn" href="#">Получить расчет
+											</a>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
 					</div>
 				</section>
-				<!-- end sWeProduce-->
+				<!-- end sCatalog-->
 			</div>
 			<!-- start sContact-->
 			<section class="sContact section" id="sContact">
