--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 	<head>
 		<meta charset="utf-8">
-		<title>title</title>
+		<title>Главная</title>
 		<meta name="description" content="о чем страница">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,  shrink-to-fit=no">
@@ -533,9 +533,68 @@
 				<section class="sCertificates section" id="sCertificates">
 					<div class="container">
 						<div class="section-title text-center">
-							<h2>sCertificates</h2>
+							<h2>Сертификаты качества на&nbsp;используемые материалы</h2>
 						</div>
-						<div class="row"></div>
+						<div class="sCertificates__slider-wrapper">
+							<div class="swiper-button-hand swiper-button-hand-prev swiper-button-prev">
+								<svg class="icon icon-arrow-left ">
+									<use xlink:href="img/svg/sprite.svg#arrow-left"></use>
+								</svg>
+							</div>
+							<div class="swiper-button-hand swiper-button-hand-next swiper-button-next">
+								<svg class="icon icon-arrow-right ">
+									<use xlink:href="img/svg/sprite.svg#arrow-right"></use>
+								</svg>
+							</div>
+							<div class="sCertificates__slider sCertificates__slider--js swiper">
+								<div class="swiper-wrapper">
+										<div class="sCertificates__slide swiper-slide">
+											<div class="sCertificates__item" data-fancybox="sCertificates" data-src="img/@2x/sCertificates-1.jpg" data-caption="Lorem ipsum dolor sit amet, &lt;br&gt; consectetur adipiscing elit">
+												<!-- picture-->
+												<picture> 
+													<source type="image/avif" srcset="img/@2x/avif/sCertificates-1.avif"/>
+													<source type="image/webp" srcset="img/@2x/webp/sCertificates-1.webp"/><img class="object-fit-js" src="img/@2x/sCertificates-1.jpg" alt="" loading="lazy"/>
+												</picture>
+												<!-- /picture-->
+												<p>Lorem ipsum dolor sit amet, <br> consectetur adipiscing elit</p>
+											</div>
+										</div>
+										<div class="sCertificates__slide swiper-slide">
+											<div class="sCertificates__item" data-fancybox="sCertificates" data-src="img/@2x/sCertificates-2.jpg" data-caption="Lorem ipsum dolor sit amet, &lt;br&gt; consectetur adipiscing elit">
+												<!-- picture-->
+												<picture> 
+													<source type="image/avif" srcset="img/@2x/avif/sCertificates-1.avif"/>
+													<source type="image/webp" srcset="img/@2x/webp/sCertificates-1.webp"/><img class="object-fit-js" src="img/@2x/sCertificates-1.jpg" alt="" loading="lazy"/>
+												</picture>
+												<!-- /picture-->
+												<p>Lorem ipsum dolor sit amet, <br> consectetur adipiscing elit</p>
+											</div>
+										</div>
+										<div class="sCertificates__slide swiper-slide">
+											<div class="sCertificates__item" data-fancybox="sCertificates" data-src="img/@2x/sCertificates-3.jpg" data-caption="Lorem ipsum dolor sit amet, &lt;br&gt; consectetur adipiscing elit">
+												<!-- picture-->
+												<picture> 
+													<source type="image/avif" srcset="img/@2x/avif/sCertificates-1.avif"/>
+													<source type="image/webp" srcset="img/@2x/webp/sCertificates-1.webp"/><img class="object-fit-js" src="img/@2x/sCertificates-1.jpg" alt="" loading="lazy"/>
+												</picture>
+												<!-- /picture-->
+												<p>Lorem ipsum dolor sit amet, <br> consectetur adipiscing elit</p>
+											</div>
+										</div>
+										<div class="sCertificates__slide swiper-slide">
+											<div class="sCertificates__item" data-fancybox="sCertificates" data-src="img/@2x/sCertificates-1.jpg" data-caption="Lorem ipsum dolor sit amet, &lt;br&gt; consectetur adipiscing elit">
+												<!-- picture-->
+												<picture> 
+													<source type="image/avif" srcset="img/@2x/avif/sCertificates-1.avif"/>
+													<source type="image/webp" srcset="img/@2x/webp/sCertificates-1.webp"/><img class="object-fit-js" src="img/@2x/sCertificates-1.jpg" alt="" loading="lazy"/>
+												</picture>
+												<!-- /picture-->
+												<p>Lorem ipsum dolor sit amet, <br> consectetur adipiscing elit</p>
+											</div>
+										</div>
+								</div>
+							</div>
+						</div>
 					</div>
 				</section>
 				<!-- end sCertificates-->
@@ -543,7 +602,7 @@
 				<section class="sCatalog sCatalog--prod section" id="sCatalog">
 					<div class="container">
 						<div class="section-title text-center">
-							<h3>Производим также</h3>
+							<h2>Производим также</h2>
 						</div>
 						<div class="sCatalog__slider-wrapper">
 							<div class="swiper-button-hand swiper-button-hand-prev swiper-button-prev">
