--- a/public/index.html
+++ b/public/index.html
@@ -503,9 +503,88 @@
 					<div class="container">
 						<div class="section-title text-center">
 							<h4>О компании</h4>
-							<h2>Работаем с&nbsp;2012&nbsp;года. Собственное производство. Сертификаты качества.</h2>
+							<h2>Работаем с 2012 года. Собственное производство. Сертификаты качества.</h2>
 						</div>
-						<div class="row"></div>
+						<div class="sAbout__slider-wrapper">
+							<div class="swiper-button-hand swiper-button-hand-prev swiper-button-prev">
+								<svg class="icon icon-arrow-left ">
+									<use xlink:href="img/svg/sprite.svg#arrow-left"></use>
+								</svg>
+							</div>
+							<div class="swiper-button-hand swiper-button-hand-next swiper-button-next">
+								<svg class="icon icon-arrow-right ">
+									<use xlink:href="img/svg/sprite.svg#arrow-right"></use>
+								</svg>
+							</div>
+							<div class="sAbout__slider sAbout__slider--js swiper">
+								<div class="swiper-wrapper">
+										<div class="sAbout__slide swiper-slide">
+											<div class="sAbout__item" data-fancybox="sAbout" data-src="img/@2x/sAbout-1.png" data-caption="Сварочный цех">
+												<div class="sAbout__img-wrap picture-bg">
+													<!-- picture-->
+													<picture> 
+														<source type="image/avif" srcset="img/@2x/avif/sAbout-1.avif" media="(min-width:576px)"/>
+														<source type="image/avif" srcset="img/@1x/avif/sAbout-1.avif"/>
+														<source type="image/webp" srcset="img/@2x/webp/sAbout-1.webp" media="(min-width:576px)"/>
+														<source type="image/webp" srcset="img/@1x/webp/sAbout-1.webp"/>
+														<source type="image/png" srcset="img/@2x/avif/sAbout-1.png" media="(min-width:576px)"/>
+														<source type="image/png" srcset="img/@1x/avif/sAbout-1.png"/><img class="object-fit-js" src="img/@2x/sAbout-1.png" alt="" loading="lazy"/>
+													</picture>
+													<!-- /picture-->
+												</div><span>Сварочный цех</span>
+											</div>
+										</div>
+										<div class="sAbout__slide swiper-slide">
+											<div class="sAbout__item" data-fancybox="sAbout" data-src="img/@2x/sAbout-1.png" data-caption="Сборочный цех">
+												<div class="sAbout__img-wrap picture-bg">
+													<!-- picture-->
+													<picture> 
+														<source type="image/avif" srcset="img/@2x/avif/sAbout-1.avif" media="(min-width:576px)"/>
+														<source type="image/avif" srcset="img/@1x/avif/sAbout-1.avif"/>
+														<source type="image/webp" srcset="img/@2x/webp/sAbout-1.webp" media="(min-width:576px)"/>
+														<source type="image/webp" srcset="img/@1x/webp/sAbout-1.webp"/>
+														<source type="image/png" srcset="img/@2x/avif/sAbout-1.png" media="(min-width:576px)"/>
+														<source type="image/png" srcset="img/@1x/avif/sAbout-1.png"/><img class="object-fit-js" src="img/@2x/sAbout-1.png" alt="" loading="lazy"/>
+													</picture>
+													<!-- /picture-->
+												</div><span>Сборочный цех</span>
+											</div>
+										</div>
+										<div class="sAbout__slide swiper-slide">
+											<div class="sAbout__item" data-fancybox="sAbout" data-src="img/@2x/sAbout-1.png" data-caption="Сварочный цех">
+												<div class="sAbout__img-wrap picture-bg">
+													<!-- picture-->
+													<picture> 
+														<source type="image/avif" srcset="img/@2x/avif/sAbout-1.avif" media="(min-width:576px)"/>
+														<source type="image/avif" srcset="img/@1x/avif/sAbout-1.avif"/>
+														<source type="image/webp" srcset="img/@2x/webp/sAbout-1.webp" media="(min-width:576px)"/>
+														<source type="image/webp" srcset="img/@1x/webp/sAbout-1.webp"/>
+														<source type="image/png" srcset="img/@2x/avif/sAbout-1.png" media="(min-width:576px)"/>
+														<source type="image/png" srcset="img/@1x/avif/sAbout-1.png"/><img class="object-fit-js" src="img/@2x/sAbout-1.png" alt="" loading="lazy"/>
+													</picture>
+													<!-- /picture-->
+												</div><span>Сварочный цех</span>
+											</div>
+										</div>
+										<div class="sAbout__slide swiper-slide">
+											<div class="sAbout__item" data-fancybox="sAbout" data-src="img/@2x/sAbout-1.png" data-caption="Сборочный цех">
+												<div class="sAbout__img-wrap picture-bg">
+													<!-- picture-->
+													<picture> 
+														<source type="image/avif" srcset="img/@2x/avif/sAbout-1.avif" media="(min-width:576px)"/>
+														<source type="image/avif" srcset="img/@1x/avif/sAbout-1.avif"/>
+														<source type="image/webp" srcset="img/@2x/webp/sAbout-1.webp" media="(min-width:576px)"/>
+														<source type="image/webp" srcset="img/@1x/webp/sAbout-1.webp"/>
+														<source type="image/png" srcset="img/@2x/avif/sAbout-1.png" media="(min-width:576px)"/>
+														<source type="image/png" srcset="img/@1x/avif/sAbout-1.png"/><img class="object-fit-js" src="img/@2x/sAbout-1.png" alt="" loading="lazy"/>
+													</picture>
+													<!-- /picture-->
+												</div><span>Сборочный цех</span>
+											</div>
+										</div>
+								</div>
+							</div>
+						</div>
 					</div>
 				</section>
 				<!-- end sAbout-->
@@ -563,8 +642,8 @@
 											<div class="sCertificates__item" data-fancybox="sCertificates" data-src="img/@2x/sCertificates-2.jpg" data-caption="Lorem ipsum dolor sit amet, &lt;br&gt; consectetur adipiscing elit">
 												<!-- picture-->
 												<picture> 
-													<source type="image/avif" srcset="img/@2x/avif/sCertificates-1.avif"/>
-													<source type="image/webp" srcset="img/@2x/webp/sCertificates-1.webp"/><img class="object-fit-js" src="img/@2x/sCertificates-1.jpg" alt="" loading="lazy"/>
+													<source type="image/avif" srcset="img/@2x/avif/sCertificates-2.avif"/>
+													<source type="image/webp" srcset="img/@2x/webp/sCertificates-2.webp"/><img class="object-fit-js" src="img/@2x/sCertificates-2.jpg" alt="" loading="lazy"/>
 												</picture>
 												<!-- /picture-->
 												<p>Lorem ipsum dolor sit amet, <br> consectetur adipiscing elit</p>
@@ -574,8 +653,8 @@
 											<div class="sCertificates__item" data-fancybox="sCertificates" data-src="img/@2x/sCertificates-3.jpg" data-caption="Lorem ipsum dolor sit amet, &lt;br&gt; consectetur adipiscing elit">
 												<!-- picture-->
 												<picture> 
-													<source type="image/avif" srcset="img/@2x/avif/sCertificates-1.avif"/>
-													<source type="image/webp" srcset="img/@2x/webp/sCertificates-1.webp"/><img class="object-fit-js" src="img/@2x/sCertificates-1.jpg" alt="" loading="lazy"/>
+													<source type="image/avif" srcset="img/@2x/avif/sCertificates-3.avif"/>
+													<source type="image/webp" srcset="img/@2x/webp/sCertificates-3.webp"/><img class="object-fit-js" src="img/@2x/sCertificates-3.jpg" alt="" loading="lazy"/>
 												</picture>
 												<!-- /picture-->
 												<p>Lorem ipsum dolor sit amet, <br> consectetur adipiscing elit</p>
