--- a/public/index.html
+++ b/public/index.html
@@ -585,6 +585,11 @@
 								</div>
 							</div>
 						</div>
+						<div class="sAbout__footer">
+							<p>Производим прочные навесы, выдерживающие нагрузку в&nbsp;суровом климате. Соблюдаем стандарты качества и&nbsp;предоставляем полный сервис под ключ для наших клиентов. С&nbsp;нами легко начать работать&nbsp;&mdash; замер, расчет сметы и 3D&minus;макет навеса мы&nbsp;делаем бесплатно.</p>
+							<a class="sAbout__btn" href="#">Записаться на&nbsp;экскурсию по&nbsp;производству
+							</a>
+						</div>
 					</div>
 				</section>
 				<!-- end sAbout-->
